--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 Changes
 =======
 
+0.04 30 Jan 2004
+  - Was missing the time_zone() method, which makes a difference when
+    you pass a DT::C::Chinese to a from_object() method for other
+    calendards
+  - Add test
+
 0.03 24 Jan 2004
   - It's good to be able to access CVS.
   - Added methods to get the Chinese year name, as well as just the
